--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,21 +11,28 @@ body {
     "boardGame";
 }
 
-.card {
+.card-front {
   height: 250px;
   width: 150px;
   background-color: #A3C7D6;
   border-style: solid;
 }
 
-.card:hover {
+.card-front:hover {
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
 
-.card:active {
+.card-front:active {
   box-shadow: none;
   transform: translateY(0);
+}
+
+.card-back {
+  height: 250px;
+  width: 150px;
+  background-color: #3c4b4f;
+  border-style: solid;
 }
 
 .header {
